
- Fixed compatibility issues with OpenSSL 1.0.

- Fixed a bug in slice2cpp that would cause invalid code to be
  generated for a nested Slice definition when the --stream option was
  used.


C# Changes
==========

- Fixed a bug in the IceSSL plug-in that could incorrectly report a
  certificate verification failure when the IceSSL.CheckCertName
  property is enabled.


======================================================================
Changes since version 3.4b
======================================================================


General Changes
===============

- Added ability to define default values for Slice data members. For
  example, you can write:

  // Slice
  class C
  {
      int i = 2;
      string name = "John";
  };

- Fixed IceGrid bug where the IceGrid node would disconnect from the
  registry if the clock was moved backward.

- Fixed hang in slice2cs and slice2py that would occur if a comment
  contained a '<' with no closing '>'.

- Fixed a bug in the Java and C# stream classes where readString() and
  readBlob() were not checking the size before allocating memory.

- Fixed source files to have consistent end of line terminators.

- Fixed the Ice.initialize(), Ice.initialize(Ice.InitializationData)
  and Ice.createProperties() overloads in Python, Ruby and PHP to
  match the C++, .NET and Java behavior. These overloads no longer
  read the ICE_CONFIG environment variable.

- Fixed IceGrid bug where updating an application could cause a
  temporary hang if a server deactivation hanged during the update.


C++ Changes
===========

- Renamed the createIceStringConverter function back to
  createStringConverter for compatibility with previous releases.


Python Changes
==============

- Fixed a code generation bug that could lead to undefined Slice
  types, depending on the order in which the generated code was
  imported.

- Changed the Python mapping for long integer constants so that 64-bit
  values are no longer generated as strings.

